--- a/index.html
+++ b/index.html
@@ -1,10 +1,253 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-    <meta charset="UTF-8">
-    <meta name="vievport" content="with=device-with, initial-scale=1.0">
-    <title>Верстка текстовыйх блоков</title>
-    <link rel="stylesheet" href="stile.css">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Колода карт</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
+<body>
+    <header>
+        <h1>Колода карт</h1>
+    </header>
+    <main>
+        <div class="deck">
+            <div class="card spade">
+                <span class="value">2</span>
+                <span class="symbol">&#9824;</span> <!-- ♠ (пики) -->
+            </div>
+            <div class="card heart">
+                <span class="value">2</span>
+                <span class="symbol">&#9829;</span> <!-- ♥ (червы) -->
+            </div>
+            <div class="card diamond">
+                <span class="value">2</span>
+                <span class="symbol">&#9830;</span> <!-- ♦ (бубны) -->
+            </div>
+            <div class="card club">
+                <span class="value">2</span>
+                <span class="symbol">&#9827;</span> <!-- ♣ (трефы) -->
+            </div>
+        </div>
+        <div class="deck">
+                <div class="card spade">
+                    <span class="value">3</span>
+                    <span class="symbol">&#9824;</span> <!-- ♠ (пики) -->
+                </div>
+                <div class="card heart">
+                    <span class="value">3</span>
+                    <span class="symbol">&#9829;</span> <!-- ♥ (червы) -->
+                </div>
+                <div class="card diamond">
+                    <span class="value">3</span>
+                    <span class="symbol">&#9830;</span> <!-- ♦ (бубны) -->
+                </div>
+                <div class="card club">
+                    <span class="value">3</span>
+                    <span class="symbol">&#9827;</span> <!-- ♣ (трефы) -->
+                </div>
+            </div>
+            <div class="deck">
+                    <div class="card spade">
+                        <span class="value">4</span>
+                        <span class="symbol">&#9824;</span> <!-- ♠ (пики) -->
+                    </div>
+                    <div class="card heart">
+                        <span class="value">4</span>
+                        <span class="symbol">&#9829;</span> <!-- ♥ (червы) -->
+                    </div>
+                    <div class="card diamond">
+                        <span class="value">4</span>
+                        <span class="symbol">&#9830;</span> <!-- ♦ (бубны) -->
+                    </div>
+                    <div class="card club">
+                        <span class="value">4</span>
+                        <span class="symbol">&#9827;</span> <!-- ♣ (трефы) -->
+                    </div>
+                </div>
+                <div class="deck">
+                        <div class="card spade">
+                            <span class="value">5</span>
+                            <span class="symbol">&#9824;</span> <!-- ♠ (пики) -->
+                        </div>
+                        <div class="card heart">
+                            <span class="value">5</span>
+                            <span class="symbol">&#9829;</span> <!-- ♥ (червы) -->
+                        </div>
+                        <div class="card diamond">
+                            <span class="value">5</span>
+                            <span class="symbol">&#9830;</span> <!-- ♦ (бубны) -->
+                        </div>
+                        <div class="card club">
+                            <span class="value">5</span>
+                            <span class="symbol">&#9827;</span> <!-- ♣ (трефы) -->
+                        </div>
+                    </div>
+                    <div class="deck">
+                            <div class="card spade">
+                                <span class="value">6</span>
+                                <span class="symbol">&#9824;</span> <!-- ♠ (пики) -->
+                            </div>
+                            <div class="card heart">
+                                <span class="value">6</span>
+                                <span class="symbol">&#9829;</span> <!-- ♥ (червы) -->
+                            </div>
+                            <div class="card diamond">
+                                <span class="value">6</span>
+                                <span class="symbol">&#9830;</span> <!-- ♦ (бубны) -->
+                            </div>
+                            <div class="card club">
+                                <span class="value">6</span>
+                                <span class="symbol">&#9827;</span> <!-- ♣ (трефы) -->
+                            </div>
+                        </div>
+                        <div class="deck">
+                                <div class="card spade">
+                                    <span class="value">7</span>
+                                    <span class="symbol">&#9824;</span> <!-- ♠ (пики) -->
+                                </div>
+                                <div class="card heart">
+                                    <span class="value">7</span>
+                                    <span class="symbol">&#9829;</span> <!-- ♥ (червы) -->
+                                </div>
+                                <div class="card diamond">
+                                    <span class="value">7</span>
+                                    <span class="symbol">&#9830;</span> <!-- ♦ (бубны) -->
+                                </div>
+                                <div class="card club">
+                                    <span class="value">7</span>
+                                    <span class="symbol">&#9827;</span> <!-- ♣ (трефы) -->
+                                </div>
+                            </div>
+                            <div class="deck">
+                                    <div class="card spade">
+                                        <span class="value">8</span>
+                                        <span class="symbol">&#9824;</span> <!-- ♠ (пики) -->
+                                    </div>
+                                    <div class="card heart">
+                                        <span class="value">8</span>
+                                        <span class="symbol">&#9829;</span> <!-- ♥ (червы) -->
+                                    </div>
+                                    <div class="card diamond">
+                                        <span class="value">8</span>
+                                        <span class="symbol">&#9830;</span> <!-- ♦ (бубны) -->
+                                    </div>
+                                    <div class="card club">
+                                        <span class="value">8</span>
+                                        <span class="symbol">&#9827;</span> <!-- ♣ (трефы) -->
+                                    </div>
+                                </div>
+                                <div class="deck">
+                                        <div class="card spade">
+                                            <span class="value">9</span>
+                                            <span class="symbol">&#9824;</span> <!-- ♠ (пики) -->
+                                        </div>
+                                        <div class="card heart">
+                                            <span class="value">9</span>
+                                            <span class="symbol">&#9829;</span> <!-- ♥ (червы) -->
+                                        </div>
+                                        <div class="card diamond">
+                                            <span class="value">9</span>
+                                            <span class="symbol">&#9830;</span> <!-- ♦ (бубны) -->
+                                        </div>
+                                        <div class="card club">
+                                            <span class="value">9</span>
+                                            <span class="symbol">&#9827;</span> <!-- ♣ (трефы) -->
+                                        </div>
+                                    </div>
+                                    <div class="deck">
+                                            <div class="card spade">
+                                                <span class="value">10</span>
+                                                <span class="symbol">&#9824;</span> <!-- ♠ (пики) -->
+                                            </div>
+                                            <div class="card heart">
+                                                <span class="value">10</span>
+                                                <span class="symbol">&#9829;</span> <!-- ♥ (червы) -->
+                                            </div>
+                                            <div class="card diamond">
+                                                <span class="value">10</span>
+                                                <span class="symbol">&#9830;</span> <!-- ♦ (бубны) -->
+                                            </div>
+                                            <div class="card club">
+                                                <span class="value">10</span>
+                                                <span class="symbol">&#9827;</span> <!-- ♣ (трефы) -->
+                                            </div>
+                                        </div>
+                                        <div class="deck">
+                                                <div class="card spade">
+                                                    <span class="value">J</span>
+                                                    <span class="symbol">&#9824;</span> <!-- ♠ (пики) -->
+                                                </div>
+                                                <div class="card heart">
+                                                    <span class="value">J</span>
+                                                    <span class="symbol">&#9829;</span> <!-- ♥ (червы) -->
+                                                </div>
+                                                <div class="card diamond">
+                                                    <span class="value">J</span>
+                                                    <span class="symbol">&#9830;</span> <!-- ♦ (бубны) -->
+                                                </div>
+                                                <div class="card club">
+                                                    <span class="value">J</span>
+                                                    <span class="symbol">&#9827;</span> <!-- ♣ (трефы) -->
+                                                </div>
+                                            </div>
+                                            <div class="deck">
+                                                    <div class="card spade">
+                                                        <span class="value">Q</span>
+                                                        <span class="symbol">&#9824;</span> <!-- ♠ (пики) -->
+                                                    </div>
+                                                    <div class="card heart">
+                                                        <span class="value">Q</span>
+                                                        <span class="symbol">&#9829;</span> <!-- ♥ (червы) -->
+                                                    </div>
+                                                    <div class="card diamond">
+                                                        <span class="value">Q</span>
+                                                        <span class="symbol">&#9830;</span> <!-- ♦ (бубны) -->
+                                                    </div>
+                                                    <div class="card club">
+                                                        <span class="value">Q</span>
+                                                        <span class="symbol">&#9827;</span> <!-- ♣ (трефы) -->
+                                                    </div>
+                                                </div>
+                                                <div class="deck">
+                                                        <div class="card spade">
+                                                            <span class="value">K</span>
+                                                            <span class="symbol">&#9824;</span> <!-- ♠ (пики) -->
+                                                        </div>
+                                                        <div class="card heart">
+                                                            <span class="value">K</span>
+                                                            <span class="symbol">&#9829;</span> <!-- ♥ (червы) -->
+                                                        </div>
+                                                        <div class="card diamond">
+                                                            <span class="value">K</span>
+                                                            <span class="symbol">&#9830;</span> <!-- ♦ (бубны) -->
+                                                        </div>
+                                                        <div class="card club">
+                                                            <span class="value">K</span>
+                                                            <span class="symbol">&#9827;</span> <!-- ♣ (трефы) -->
+                                                        </div>
+                                                    </div>
+                                                    <div class="deck">
+                                                            <div class="card spade">
+                                                                <span class="value">A</span>
+                                                                <span class="symbol">&#9824;</span> <!-- ♠ (пики) -->
+                                                            </div>
+                                                            <div class="card heart">
+                                                                <span class="value">A</span>
+                                                                <span class="symbol">&#9829;</span> <!-- ♥ (червы) -->
+                                                            </div>
+                                                            <div class="card diamond">
+                                                                <span class="value">A</span>
+                                                                <span class="symbol">&#9830;</span> <!-- ♦ (бубны) -->
+                                                            </div>
+                                                            <div class="card club">
+                                                                <span class="value">A</span>
+                                                                <span class="symbol">&#9827;</span> <!-- ♣ (трефы) -->
+                                                            </div>
+                                                        </div>
+    </main>
+    <footer>
+        <p>&copy; 2023 Колода карт</p>
+    </footer>
+</body>
 </html>
